version 0.9.7+
	* Adapt status output to terminal width (by Alex Ford)
	* Add a newline at the end of lockfiles for file backend

version 0.9.7 Tue Feb 18 2014 by luispedro
	* Fix use of numpy subclasses
	* Fix redis URL parsing
	* Fix ``shell`` for newer versions of IPython
	* Correctly fall back on non-sqlite ``status``
	* Allow user to call set_jugdir() inside jugfile

version 0.9.6 Tue Aug 6 2013 by luispedro
	* Faster decoding
	* Add jug-execute script
	* Add describe() function
	* Add write_task_out() function
	* Allow for set_jugdir() to be called inside jugfile

version 0.9.5 Mon May 27 2013 by luispedro
	* Added debug mode
	* Even better map.reduce.map using blocked access
	* Python 3 support
	* Make sqlite3 a soft dependency for ``status --cache``
	* Load config when embedding ipython
	* Documentation improvements

version 0.9.4 Mon Apr 15 2013 by luispedro
	* Add CustomHash wrapper to set __jug_hash__
	* Print traceback on import error
	* Exit when no progress is made even with barrier
	* Use Tasklets for better jug.mapreduce.map
	* Use Ipython debugger if available (patch by Alex Ford)
	* Faster --aggressive-unload
	* Add currymap() function

version 0.9.3 Sun Dec 2 2012 by luispedro
	* Fix parsing of ports on redis URL (patch by Alcides Viamontes)
	* Make hashing robust to different orders when using randomized hashing
	(patch by Alcides Viamontes)
	* Allow regex in invalidate command (patch by Alcides Viamontes)
	* Add --cache --clear suboption to status
	* Allow builtin functions for tasks
	* Fix status --cache (a general bug which seems to be triggered mainly by
	bvalue() usage).
	* Fix CompoundTask (broken by earlier __jug_hash__ hook introduction)
	* Make Tasklets more flexible by allowing slicing with Tasks (previously,
	slicing with tasks was **not** allowed)

version 0.9.2 Sun Nov 4 2012 by luispedro
	* More flexible mapreduce()/map() functions
	* Make TaskGenerator pickle()able and hash()able
	* Add invalidate() method to Task