@@ -1,6 +1,7 @@
 version 0.9.7+
 	* Adapt status output to terminal width (by Alex Ford)
 	* Add a newline at the end of lockfiles for file backend
+	* Add --cache-file option to specify file for ``status --cache``
 
 version 0.9.7 Tue Feb 18 2014 by luispedro
 	* Fix use of numpy subclasses
